6_monitoring/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    openshift.io/cluster-monitoring: "true"
